--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -127,6 +127,11 @@
                         #Manualcontrol style="color:#ff651e;"
                         [disabled]="BillItem.PreOrder === true">Manual</mat-slide-toggle>
                 </div>
+                <div class="col-xl-1 col-lg-1 col-md-3 col-4 pt-3">
+                    <mat-slide-toggle name="disocuntSettingBtn" color="primary" [(ngModel)]="discontSettingBtn" class="example-margin"
+                        #Manualcontrol style="color:#ff651e;"
+                        >Disocunt</mat-slide-toggle>
+                </div>
                 <div class="col-xl-1 col-lg-1 col-md-3 col-4 p-0 pt-3">
                     <span *ngIf="this.loginShop.WholesaleBill === 'true'">
                     <mat-slide-toggle name="WholeSale" color="primary" [(ngModel)]="BillItem.WholeSale" 
@@ -383,8 +388,7 @@
                         <mat-label>Quantity</mat-label>
                         <input matInput name="Quantity" type="number" min="1" [(ngModel)]="BillItem.Quantity"
                             type="number"
-                            (blur)="calculations('Quantity', 'subTotal');calculations('GSTPercentage', 'gst');calculations('TotalAmount', 'total');
-                            discountSetting('qty')"
+                            (blur)="calculations('DiscountPercentage', 'discount');calculations('Quantity', 'subTotal');calculations('GSTPercentage', 'gst');calculations('TotalAmount', 'total');"
                             required #Quantitycontrol [autocomplete]="false">
                         <mat-error>
                             Quantity is required
