--- a/web1/src/app/product/discount/discount.component.html
+++ b/web1/src/app/product/discount/discount.component.html
@@ -117,11 +117,87 @@
                                     </div>
                                     <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12  mb-0 ">
                                         <button type="submit" mat-raised-button color="primary" [disabled]="!f.valid">save</button>
-                                        <button type="button"  class="ms-3"  mat-raised-button color="primary">Update</button>
+                                        <!-- <button type="button"  class="ms-3"  mat-raised-button color="primary">Update</button> -->
                                     </div>
                                 </div>
                             </form>
                             <!-- form end -->
+                        </div>
+
+                        <div class="body mt-md-1 mt-5 p-2">
+                            <div class="row ">
+                                <div class="col-lg-1 col-md-2 col-6 p-0 ms-3 header">
+                                    <h2>Discount List  </h2>
+                                </div>
+                                <div class="col-md-2 col-3 ps-md-0 ps-1 order-1 order-md-1">
+                                    <select class="form-control" id="itemsPerPage"   name="itemsPerPage"  
+                                        style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
+                                        [(ngModel)]="itemsPerPage" (change)="getList();">
+                                        <option [ngValue]="10">Show 10 Row</option>
+                                        <option [ngValue]="25">Show 25 Row</option>
+                                        <option [ngValue]="50">Show 50 Row</option>
+                                        <option [ngValue]="100">Show 100 Row</option>
+                                        <option [ngValue]="250">Show 250Row</option>
+                                        <option [ngValue]="500">Show 500 Row</option>
+                                    </select>
+                                </div>
+                                <div class="col-md-3 col-6 mx-md-auto order-2 order-md-1" style="margin-top:0px;">
+                                    <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false"
+                                        ngbPaginationEllipsis [collectionSize]="collectionSize" #numPages
+                                        [pageSize]="itemsPerPage" [(page)]="currentPage" (pageChange)="getList()"
+                                        [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
+                                    </ngb-pagination>
+                                </div>
+                               
+                                <div class="col-md-2 col-5 ms-auto order-0 order-md-1">
+                                    <div class="input-group">
+                                        <input placeholder="Search" [(ngModel)]="term" #searching mdbInput type="search"
+                                            id="form1" class="form-control" />
+                                    </div>
+                                </div>
+                               
+                            </div>
+                            <div class="row" >
+                                <div class="col-sm-12" style="overflow: auto; height: 530px;">
+                                    <div class="table-responsive">
+                                        <table class="table table-striped table-hover table-sm table-bordered"
+                                            style="border: 2px solid #fff !important;">
+                                            <thead>
+                                                <tr>
+                                                    <th>Action</th>
+                                                    <th>S.No</th>
+                                                    <th>ProductName</th>
+                                                    <th>DiscountType</th>
+                                                    <th>DiscountValue</th>
+                                                    <th>CreatedByUser</th>
+                                                    <th>ShopName</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr class="text-center" *ngFor="let data of dataList let i = index;"
+                                                    style="white-space: nowrap;">
+                                                    <td style="width: 7%;">
+                                                        <button class="bg-none" (click)="openModalEdit(content2,data)" >
+                                                            <mat-icon class="edit_icon ms-1" data-mdb-toggle="modal"
+                                                                data-mdb-target="#exampleModal">edit</mat-icon>
+                                                        </button>
+                                                        <button  class="bg-none" (click)="deleteItem(i)" >
+                                                            <mat-icon class="delete_icon ms-1">
+                                                                delete_forever</mat-icon>
+                                                        </button>
+                                                    </td>
+                                                    <td>{{i+1}}</td>
+                                                    <td>{{data.ProductName}}</td>
+                                                    <td>{{data.DiscountType}}</td>
+                                                    <td>{{data.DiscountValue}}</td>
+                                                    <td>{{data.CreatedByUser}}</td>
+                                                    <td>{{data.ShopName}}{{data.AreaName}}</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                 
                     </div>
@@ -183,5 +259,72 @@
         </div>
         </div>
        </form>
+    </div>
+</ng-template>
+
+
+<ng-template #content2 role="document" let-modal>
+    <div class="modal-header" style="height: 50px;">
+        <h3 class="modal-title header pt-2" id="exampleModalLabel">Range</h3>
+        <button type="button" class="btn-close" aria-hidden="true" (click)="modal.dismiss('Cross click')"></button>
+    </div>
+    <div class="modal-body ">
+        <form #f4="ngForm" autocomplete="off"  >
+            <div class="row">
+                <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12 mb-0">
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label>Select Product</mat-label>
+                        <mat-select name="FieldType" [(ngModel)]="update1.ProductTypeID"
+                            (selectionChange)="getFieldList()" required #Typecontrol disabled>
+                            <mat-option>
+                                <ngx-mat-select-search matInput [(ngModel)]="searchValue" (ngModelChange)="searchValue = onChange($event)" [ngModelOptions]="{standalone: true}">
+                                </ngx-mat-select-search>
+                            </mat-option>
+                            <!-- <mat-option [value]=0>All</mat-option> -->
+                            <mat-option *ngFor="let prod of prodList  searchValue  let i = index;"
+                                [value]="prod.ID">
+                                {{prod.Name | uppercase}}
+                            </mat-option>
+                        </mat-select>
+                        <mat-error>
+                            Select Product Type
+                        </mat-error>
+                    </mat-form-field>
+                </div>
+                <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12 mb-0">
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label>Product Name</mat-label>
+                        <input matInput name="Name" [(ngModel)]="update1.ProductName" disabled  #Namecontrol>
+                    </mat-form-field>
+                </div>
+
+                <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12 mb-0">
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label>Discount Type</mat-label>
+                        <mat-select name="DiscountType" [(ngModel)]="update1.DiscountType" required disabled >
+                            <mat-option value="range" (click)="openModal(content)">Range</mat-option>
+                            <mat-option value="rupees">Rupees</mat-option>
+                            <mat-option value="percentage">Percentage</mat-option>
+                            <mat-option value="fixed">Fixed</mat-option>
+                            <mat-option value="fixed with manual">Fixed with manual</mat-option>
+                            <mat-option value="no discount">No Discount</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+                <div *ngIf="data1.DiscountType != 'range'" class="col-xl-2 col-lg-2 col-md-3 col-sm-12 mb-0">
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label>Discount Value</mat-label>
+                        <input matInput name="DiscountValue" [(ngModel)]="update1.DiscountValue" #DiscountValuecontrol
+                            [autocomplete]="false" required>
+                        <mat-error>
+                            DiscountValue is required
+                        </mat-error>
+                    </mat-form-field>
+                </div>
+                <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12  mb-0 ">
+                    <button type="button"  class="ms-3" (click)="update()" mat-raised-button color="primary" [disabled]="!f4.valid">Update</button>
+                </div>
+            </div>
+        </form>
     </div>
 </ng-template>
