--- a/web1/src/app/admin/shop-list/shop-list.component.html
+++ b/web1/src/app/admin/shop-list/shop-list.component.html
@@ -396,6 +396,11 @@
                                 [(ngModel)]="data.AdminDiscount" class="example-margin">Admin
                                 Discount</mat-slide-toggle>
                         </div>
+                        <div class="col-lg-2 col-md-2 col-sm-6 col-6 p-0">
+                            <mat-slide-toggle type="toggleChecked" name="DiscountSetting" color="primary"
+                                [(ngModel)]="data.DiscountSetting" class="example-margin">
+                                Discount Setting</mat-slide-toggle>
+                        </div>
                     </div>
                     <!-- Save/Cancel -->
                     <div class="row my-4">
