--- a/web1/src/app/product/discount/discount.component.html
+++ b/web1/src/app/product/discount/discount.component.html
@@ -100,7 +100,7 @@
                                                 <mat-option value="rupees">Rupees</mat-option>
                                                 <mat-option value="percentage">Percentage</mat-option>
                                                 <mat-option value="fixed">Fixed</mat-option>
-                                                <!-- <mat-option value="fixed with manual">Maximum Discount Set</mat-option> -->
+                                                <mat-option value="fixed with manual">Maximum Discount Set</mat-option>
                                                 <mat-option value="no discount">No Discount</mat-option>
                                             </mat-select>
                                         </mat-form-field>
