--- a/web1/src/app/admin/shop-list/shop-list.component.html
+++ b/web1/src/app/admin/shop-list/shop-list.component.html
@@ -401,6 +401,16 @@
                                 [(ngModel)]="data.DiscountSetting" class="example-margin">
                                 Discount Setting</mat-slide-toggle>
                         </div>
+                        <div class="col-lg-2 col-md-2 col-sm-6 col-6 p-0">
+                            <mat-slide-toggle type="toggleChecked" name="PerOrder" color="primary"
+                                [(ngModel)]="data.PerOrder" class="example-margin">
+                                PerOrder</mat-slide-toggle>
+                        </div>
+                        <div class="col-lg-2 col-md-2 col-sm-6 col-6 p-0">
+                            <mat-slide-toggle type="toggleChecked" name="Manual" color="primary"
+                                [(ngModel)]="data.Manual" class="example-margin">
+                                 Manual</mat-slide-toggle>
+                        </div>
                     </div>
                     <!-- Save/Cancel -->
                     <div class="row my-4">
